[gd_scene load_steps=17 format=3 uid="uid://b3koueh5166hj"]

[ext_resource type="Script" path="res://src/UI/LandingScreen.gd" id="1"]
[ext_resource type="Theme" uid="uid://hgc7wambejk3" path="res://Assets/MainEditor.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://dl16h251n4u8p" path="res://Assets/UI Textures/Icon Font/settings-cog-line.png" id="3_rydwl"]
[ext_resource type="PackedScene" uid="uid://b8upc5vs5ynlw" path="res://src/UI/Editor/EditorSettings.tscn" id="4_3xjq6"]
[ext_resource type="Texture2D" uid="uid://bd4txg8vqwt73" path="res://Assets/UI Textures/editor_icon.svg" id="4_edwkw"]
[ext_resource type="FontFile" uid="uid://cyk3wyylndkgg" path="res://Assets/Font/Lexend-VariableFont_wght.ttf" id="4_tgwf2"]

[sub_resource type="FontVariation" id="FontVariation_mmhe0"]
base_font = ExtResource("4_tgwf2")

[sub_resource type="FontFile" id="2"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_top = 20.0

[sub_resource type="Theme" id="5"]
Button/fonts/font = SubResource("2")
Label/fonts/font = SubResource("3")
Window/fonts/title_font = SubResource("4")
Window/styles/panel = SubResource("6")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5w7n4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kf54y"]
bg_color = Color(0.223529, 0.223529, 0.223529, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3qmf"]
bg_color = Color(0.0117647, 0.0117647, 0.0117647, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_01jgx"]
font_size = 22

[node name="LandingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 0
offset_left = 175.0
offset_top = 15.0
offset_right = 912.0
offset_bottom = 599.0

[node name="ProgramTitleLabe" type="RichTextLabel" parent="Panel/VBoxContainer2"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.74902, 0, 1)
theme_override_fonts/bold_font = SubResource("FontVariation_mmhe0")
theme_override_font_sizes/bold_font_size = 62
bbcode_enabled = true
text = "[b]Yellow's Dialog Editor 
v0.7.1"

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer2"]
layout_mode = 2

[node name="Wiki Link" type="LinkButton" parent="Panel/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Wiki"
uri = "https://github.com/Yellow768/Yellows-Dialog-Editor/wiki"

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="GitHub Page" type="LinkButton" parent="Panel/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Github"
uri = "https://github.com/Yellow768/Yellows-Dialog-Editor"

[node name="VSeparator2" type="VSeparator" parent="Panel/VBoxContainer2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Releases" type="LinkButton" parent="Panel/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Releases"
uri = "https://github.com/Yellow768/Yellows-Dialog-Editor/releases"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2

[node name="Open Environment" type="Button" parent="Panel/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(435, 50)
layout_mode = 2
text = "OPEN_ENV"

[node name="Label" type="Label" parent="Panel/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "BEGIN_SPLASH"
autowrap_mode = 2

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer2/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="PrevDirsContainer" type="VBoxContainer" parent="Panel/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(900, 580)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer2/HBoxContainer/PrevDirsContainer"]
layout_mode = 2
text = "RECENT_ENVS"

[node name="FileDialog" type="FileDialog" parent="Panel"]
mode = 3
title = "FILE_TITLE"
position = Vector2i(160, 45)
size = Vector2i(915, 600)
min_size = Vector2i(240, 600)
theme = SubResource("5")
ok_button_text = "Select Current Folder"
cancel_button_text = "CANCEL"
mode_overrides_title = false
file_mode = 2
access = 2
show_hidden_files = true

[node name="InvalidFolderWarning" type="Popup" parent="Panel"]
title = "FILE_INVALID"
size = Vector2i(1660, 230)

[node name="Label" type="Label" parent="Panel/InvalidFolderWarning"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "The selected folder is not a valid CustomNPCS environment.

You may continue, but you will not be able to access named quests, factions, or existing dialogs, and exported dialogs will not properly index their IDs, with will cause conflicts if you manually move them into a world.

Do you wish to proceed?"
horizontal_alignment = 1

[node name="Confirm" type="Button" parent="Panel/InvalidFolderWarning"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 137.0
offset_top = -42.0
offset_right = 199.0
offset_bottom = -22.0
text = "Confirm"

[node name="Cancel" type="Button" parent="Panel/InvalidFolderWarning"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -177.0
offset_top = -45.0
offset_right = -123.0
offset_bottom = -25.0
text = "Cancel"

[node name="EditorSettingsButton" type="Button" parent="."]
process_mode = 1
custom_minimum_size = Vector2(30, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -165.0
offset_bottom = 73.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_5w7n4")
theme_override_styles/hover = SubResource("StyleBoxFlat_kf54y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v3qmf")
text = "EDITOR_SETTINGS"
icon = ExtResource("3_rydwl")

[node name="InvalidDirectory" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -70.0
offset_right = 94.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
text = "Directory Does Not Exist"
label_settings = SubResource("LabelSettings_01jgx")

[node name="EditorIcon" type="Sprite2D" parent="."]
position = Vector2(447, 167)
scale = Vector2(0.712989, 0.712989)
texture = ExtResource("4_edwkw")

[node name="EditorSettings" parent="." instance=ExtResource("4_3xjq6")]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0

[connection signal="pressed" from="Panel/VBoxContainer2/HBoxContainer/VBoxContainer/Open Environment" to="." method="_on_Open_Environment_pressed"]
[connection signal="dir_selected" from="Panel/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="visibility_changed" from="Panel/FileDialog" to="." method="_on_file_dialog_visibility_changed"]
[connection signal="pressed" from="Panel/InvalidFolderWarning/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="button_up" from="Panel/InvalidFolderWarning/Cancel" to="." method="_on_Cancel_button_up"]
[connection signal="pressed" from="EditorSettingsButton" to="EditorSettings" method="_on_editor_settings_button_pressed"]
